--- a/creativity-test.html
+++ b/creativity-test.html
@@ -42,6 +42,14 @@
             .section {
                 page-break-inside: avoid;
             }
+
+            .response-area textarea {
+    height: auto !important;
+    min-height: 0 !important;
+    border: 1px solid #ccc;
+    overflow: visible !important;
+    page-break-inside: avoid;
+}
         }
         
         .container {
